fix: change widget close button on mobile

--- a/src/widget/styles/base.css
+++ b/src/widget/styles/base.css
@@ -227,4 +227,8 @@ html, body, #app { width: 100%; height: 100%; background: transparent; font-fami
     right: 20px;
     pointer-events: all;
   }
+
+  .chat-fab.chat-fab--open {
+    display: none;
+  }
 }
